# SparseAnalyzer

./: README.md  einsum_analyzer.py  einsum_parser.py  pyproject.toml  test.py
parser/: einsum_ast.py  einsum_parser.py
sparseanalyzer/: __init__.py  operators.py
sparseanalyzer/einsum/: interpreter.py  nodes.py  parser.py
sparseanalyzer/setbuilder/: __init__.py  nodes.py  simplify.py
sparseanalyzer/symbolic/: __init__.py  environment.py  term.py
sparseanalyzer/visitors/: ConcreteDistributionVisitor.py  CountOpsVisitor.py  DataDistributionVisitor.py  EinsumVisitor.py
tests/: test_basic.py  test_setbuilder.py
visitors/: CountOpsVisitor.py  DataDistributionVisitor.py  EinsumVisitor.py  RowDistributionVisitor.py
